--- a/Bluit-Rails/app/assets/stylesheets/style.sass
+++ b/Bluit-Rails/app/assets/stylesheets/style.sass
@@ -11,7 +11,10 @@ html, body
   margin: 0 auto -60px
 
 footer, .push
-  height: 60px
+  height: 60
+
+footer .well
+  margin-bottom: 0
 
 .container
   width: 100% !important
@@ -29,13 +32,14 @@ footer, .push
 header
   background-color: #cee3f8
   height: 45px
-  line-height: 45px
   font-size: 18px
-  margin-bottom: 10px
+  line-height: 45px
+  margin-bottom: 0
   padding: 0 1rem
 
 main
   margin-left: 10px
+  padding-top: 10px
   ul.posts
     padding-left: 0
     li
@@ -69,6 +73,15 @@ ul.posts, article
   .tagline
     color: #888
     font-size: x-small
+  section.body
+    border: 1px solid #3498db
+    border-radius: 7px
+    margin: 15px 0
+    padding: 5px
+    background-color: #fafafa
+    max-width: 60em
+    overflow: auto
+    font-size: small
   ul.actions
     list-style-type: none
     padding: 1px 0
@@ -84,19 +97,9 @@ ul.posts, article
         padding: 0 1px
         text-decoration: none
 
-article
-  section.body
-    border: 1px solid #3498db
-    border-radius: 7px
-    margin: 15px 0
-    padding: 5px
-    background-color: #fafafa
-    max-width: 60em
-    overflow: auto
-    font-size: small
-
 nav#sidebar
   margin-right: 10px
+  padding-top: 10px
   a
     display: block
     text-align: center
@@ -104,18 +107,83 @@ nav#sidebar
     font-size: 16px
     font-weight: bold
     height: 29px
-    line-height: 29px
     margin-bottom: 12px
+    line-height: 29px
     color: #369
-    background: white
-    background: linear-gradient(to bottom, white 0%, #ebf3fc 100%)
+    background: #fff
+    background: -moz-linear-gradient(top,  #ffffff 0%, #ebf3fc 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#ebf3fc))
+    background: -o-linear-gradient(top,  #ffffff 0%,#ebf3fc 100%)
+    background: -ms-linear-gradient(top,  #ffffff 0%,#ebf3fc 100%)
+    background: linear-gradient(to bottom,  #ffffff 0%,#ebf3fc 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ebf3fc',GradientType=0 )
+
   a:hover
-    text-decoration: none
     color: white
+    text-decoration: none
     background: #d7ebff
-    background: linear-gradient(to bottom, #d7ebff 0%, #aec8e1 50%, #9cbcd9 51%, #74a4d2 100%)
+    background: -moz-linear-gradient(top,  #d7ebff 0%, #aec8e1 50%, #9cbcd9 51%, #74a4d2 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d7ebff), color-stop(50%,#aec8e1), color-stop(51%,#9cbcd9), color-stop(100%,#74a4d2))
+    background: -webkit-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: -o-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: -ms-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: linear-gradient(to bottom,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7ebff', endColorstr='#74a4d2',GradientType=0 )
 
 footer
   color: gray
   font-size: smaller
   text-align: center
+
+.category
+  h2
+    margin-top: 0
+  .description
+    padding-bottom: 0.5em
+    border-bottom: 1px solid gray
+    margin-bottom: 0.5em
+
+nav#categories
+  background-color: #f0f0f0
+  white-space: nowrap
+  text-transform: uppercase
+  border-bottom: 1px solid gray
+  font-size: 10px
+  height: 18px
+  line-height: 18px
+  margin-bottom: 0
+  ul.category-list
+    display: inline
+    position: absolute
+    right: 0
+    left: 95px
+    overflow: hidden
+    list-style: none
+    padding: 0
+    margin: 0
+    li
+      display: inline
+      .separator
+        color: gray
+        margin: 0 0.7ex
+  .dropdown
+    float: left
+    padding-left: 5px
+    button
+      text-transform: uppercase
+      border: 0
+      background-color: inherit
+      padding: 0
+    .dropdown-menu
+      font-size: 10px
+
+#session_actions
+  position: absolute
+  right: 0px
+  bottom: 0px
+  background-color: #eff7ff
+  padding: 4px
+  // margin-bottom: 10px
+  line-height: 12px
+  border-top-left-radius: 7px
+  font-size: x-small
