--- a/Bluit-Rails/app/views/posts/_slug.html.erb
+++ b/Bluit-Rails/app/views/posts/_slug.html.erb
@@ -3,4 +3,5 @@
 </div>
 <div class="tagline" title="<%= post.created_at %>">
   submitted <%= time_ago_in_words post.created_at %> ago
+  to <%= link_to post.category&.name, post.category %>
 </div>
