--- a/Bluit-Rails/app/views/posts/index.html.erb
+++ b/Bluit-Rails/app/views/posts/index.html.erb
@@ -1,8 +1,3 @@
-<ul class="posts">
-  <% @posts.each do |post| %>
-    <li>
-      <%= render "slug", post: post %>
-      <%= render "actions", post: post %>
-    </li>
-  <% end %>
-</ul>
+<h1>Posts</h1>
+
+<%= render "list", posts: @posts %>
